# yet-another-bevy-game

./: CLAUDE.md  Cargo.toml  DATA_DRIVEN_ARCHITECTURE.md
.claude/: settings.local.json
assets/: game_config.ron
assets/enemies/: exploder.enemy.ron  medium.enemy.ron  ranged_flyer.enemy.ron  ranged_ground.enemy.ron  straight_flyer.enemy.ron  strong.enemy.ron  weak.enemy.ron  zigzag_flyer.enemy.ron
assets/weapons/: auto_shooter.weapon.ron  melee_punch.weapon.ron  orbiting_blade.weapon.ron
src/: behaviors.rs  combat.rs  constants.rs  enemy.rs  experience.rs  main.rs  movement.rs  physics.rs  player.rs  powerups.rs  validation.rs  weapons.rs
src/player/: energy.rs  mod.rs  movement.rs  spawning.rs  ui.rs
src/powerups/: application.rs  mod.rs  ui.rs
src/weapons/: behaviors.rs  melee.rs  mod.rs  ui.rs  upgrades.rs
