[package]
name = "vampire_survivors_platformer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17.2", features = ["file_watcher"] }
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
ron = "0.11.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
